--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,20 @@
     <string name="app_name">MyLogin</string>
     <string name="btn_login">LOG IN</string>
     <string name="btn_signup">SIGN UP</string>
-    <string name="txt_forgot">Has olvidado tu contraseña?</string>
-    <string name="txt_user">    USUARI</string>
-    <string name="txt_pass">    PASSWORD</string>
+    <string name="txt_forgot">Forgotten your password?</string>
+    <string name="txt_user_hint">Username</string>
+    <string name="txt_password_hint">Password</string>
+    <string name="txt_forgot_mail_hint">Mail address</string>
     <string name="btn_forgotpopup">ENVIAR</string>
-    <string name="btn_volver">VOLVER</string>
-    <string name="txt_forgotpopup">Introduce la cuenta de correo eléctronico asociada a esta cuenta, se le enviará un correo de recuperación</string>
+    <string name="btn_back">VOLVER</string>
+    <string name="txt_forgotpopup">Enter the email address associated with this account, a recovery
+    email will be sent to you.</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_login_popup">Forgot your password?</string>
 </resources>
