--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="error_wrong_password">The password is invalid</string>
     <string name="error_user_banned">Your account is banned, please contact the support</string>
     <string name="error_user_not_verified">Your account is not verified. \nCheck your email to activate it</string>
+    <string name="password_recovery_email_sent">"A password recovery email was sent to "</string>
     <!-- End -->
 
 </resources>
