--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,30 +4,37 @@
 
 
 
-    <!-- Login Activity Resources -->
+    <!-- Login & Signup Activity Resources -->
     <string name="title_activity_login">Login</string>
     <string name="btn_login">LOG IN</string>
     <string name="btn_signup">SIGN UP</string>
     <string name="txt_forgot">Forgotten your password?</string>
     <string name="txt_user_hint">Username</string>
+    <string name="txt_fullname_hint">Full Name</string>
     <string name="txt_password_hint">Password</string>
+    <string name="txt_repeat_password_hint">Repeat Password</string>
+    <string name="txt_email_hint">Email</string>
+    <string name="go_login_hint">Login</string>
+    <string name="cb_18y">I confirm that I am at least 18 years old</string>
 
-        <!-- Errors -->
-        <string name="error_empty_login_fields">Username/Password field is empty, please fill
-        them to login</string>
+    <!-- Errors -->
+    <string name="error_empty_login_fields">Username/Password field is empty, please fill
+    them to login</string>
+    <string name="error_wrong_username">There is no account record with this username</string>
+    <string name="error_wrong_password">The password is invalid</string>
+    <string name="error_user_banned">Your account is banned, please contact the support</string>
+    <string name="error_user_not_verified">Your account is not verified. \nCheck your email to activate it</string>
+    <string name="error_age_not_permitted">You don\'t reach the permitted age to join our community</string>
     <!-- End -->
 
     <!-- Forgot Password Activity Resources -->
     <string name="title_activity_login_popup">Forgot your password?</string>
+    <string name="txt_already_account">Already have an account?</string>
     <string name="txt_forgot_mail_hint">Mail address</string>
     <string name="btn_forgotpopup">ENVIAR</string>
     <string name="btn_back">VOLVER</string>
     <string name="txt_forgotpopup">Enter the email address associated with this account, a recovery
     email will be sent to you.</string>
-    <string name="error_wrong_username">There is no account record with this username</string>
-    <string name="error_wrong_password">The password is invalid</string>
-    <string name="error_user_banned">Your account is banned, please contact the support</string>
-    <string name="error_user_not_verified">Your account is not verified. \nCheck your email to activate it</string>
     <string name="password_recovery_email_sent">"A password recovery email was sent to "</string>
     <!-- End -->
 
