--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">MyLogin</string>
+    <string name="app_name">SportsHub!</string>
     <string name="title_activity_register">RegisterActivity</string>
-
 
 
     <!-- Login & Signup Activity Resources -->
