--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
 
     <!-- Profile -->
     <string name="title_activity_profile" translatable="false">Profile</string>
+    <string name="button_edit_event">EDIT</string>
     <!-- End -->
 
 </resources>
