--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -37,4 +37,6 @@
     <string name="button_add_image">IMAGEN</string>
     <string name="button_add_event">GUARDAR</string>
     <string name="edit_event_text">Editar Evento</string>
+    <string name="will_assist">Asistir</string>
+    <string name="button_edit_event">EDITAR</string>
 </resources>
