Big changes - Big refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="title_activity_profile" translatable="false">Profile</string>
     <string name="button_edit_event">EDIT</string>
     <string name="title_activity_edit_profile" translatable="false">edit profile</string>
+    <string name="four_clicks_left_logout">4 clicks left to logout</string>
+    <string name="three_clicks_left_logout">3 clicks left to logout</string>
+    <string name="two_clicks_left_logout">2 clicks left to logout</string>
+    <string name="one_click_left_logout">1 click left to logout</string>
     <!-- End -->
 
 </resources>
