--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,9 @@
     <string name="three_clicks_left_logout">3 clicks left to logout</string>
     <string name="two_clicks_left_logout">2 clicks left to logout</string>
     <string name="one_click_left_logout">1 click left to logout</string>
+    <string name="followers">Followers</string>
+    <string name="followees">followees</string>
+    <string name="preferences">preferences</string>
     <!-- End -->
 
 </resources>
