--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -61,4 +61,5 @@
     <string name="mapFragment">Mapa</string>
     <string name="event_image_uploaded">Imagen Subida!</string>
     <string name="event_created">El Evento ha sido creado!</string>
+    <string name="event_image_not_uploaded">Error: Imagen no subida! Intentalo de nuevo!</string>
 </resources>
