--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,4 +62,5 @@
     <string name="event_image_uploaded">Imagen Subida!</string>
     <string name="event_created">El Evento ha sido creado!</string>
     <string name="event_image_not_uploaded">Error: Imagen no subida! Intentalo de nuevo!</string>
+    <string name="event_created_by">Creado por</string>
 </resources>
