--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -64,4 +64,15 @@
     <string name="event_image_not_uploaded">Error: Imagen no subida! Intentalo de nuevo!</string>
     <string name="event_created_by">Creado por</string>
     <string name="event_creation_error">Ha ocurrido un error.</string>
+    <string name="followees2">SEGUIDOS</string>
+    <string name="followed">seguido</string>
+    <string name="followers2">SEGUIDORES</string>
+    <string name="following">siguiendo</string>
+    <string name="other_events">Otros Eventos</string>
+    <string name="default_description" >"Hey, estoy usando SportsHub!"</string>
+    <string name="title_activity_profile_other">Perfiles Externos</string>
+    <string name="title_activity_profile">Perfil</string>
+    <string name="title_activity_edit_profile">Editar perfil</string>
+
+
 </resources>
