--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -73,6 +73,7 @@
     <string name="title_activity_profile_other">Perfiles Externos</string>
     <string name="title_activity_profile">Perfil</string>
     <string name="title_activity_edit_profile">Editar perfil</string>
-
+    <string name="following_status">Siguiendo</string>
+    <string name="not_following_status">No lo sigues</string>
 
 </resources>
