Hardcoded Strings fix

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -72,7 +72,8 @@
     <string name="default_description" >"Hey, estoy usando SportsHub!"</string>
     <string name="title_activity_profile_other">Perfiles Externos</string>
     <string name="title_activity_profile">Perfil</string>
-    <string name="title_activity_edit_profile">Editar perfil</string>
+    <string name="new_name">Nuevo Nombre</string>
+<string name="title_activity_edit_profile">Editar perfil</string>
     <string name="sportshub_description">Una aplicación de SportsTech</string>
     <!-- End -->
     <string name="loading">Porfavor, espere...</string>
