--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="preferences">Preferences</string>
     <string name="activities">Activities</string>
     <string name="my_events">My events</string>
+    <string name="new_name">New Name</string>
     <string name="my_activities">My activities</string>
     <string name="events">Events</string>
     <string name="new_profile_image">New image</string>
