Assist notifications working.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -76,6 +76,8 @@
     <string name="follow_message">%1$s te acaba de seguir! Mira su perfil.</string>
     <string name="unfollow">Unfollow</string>
     <string name="follow">Follow</string>
+    <string name="notify_assist_to_creator">%1$s asistirá a tu evento %2$s!</string>
+    <string name="notify_assist_to_followers">%1$s asistirá al evento %2$s!</string>
 
 
 </resources>
