--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -78,6 +78,7 @@
     <string name="follow">Follow</string>
     <string name="notify_assist_to_creator">%1$s asistirá a tu evento %2$s!</string>
     <string name="notify_assist_to_followers">%1$s asistirá al evento %2$s!</string>
+    <string name="notify_event_liked">%1$s acaba de dar me gusta a tu evento: %2$s!</string>
 
 
 </resources>
