--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="follow">Follow</string>
     <string name="notify_assist_to_creator">%1$s will assist to your %2$s event!</string>
     <string name="notify_assist_to_followers">%1$s will assist to the %2$s event!</string>
+    <string name="notify_event_liked">%1$s just liked your event: %2$s!</string>
 
     <!-- End -->
 
