--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -82,4 +82,7 @@
     <string name="new_name">Nuevo Nombre</string>
     <string name="sportshub_description">Una aplicación de SportsTech</string>
     <string name="loading">Porfavor, espere...</string>
+    <string name="title_notification_followed">%1$s has followed you!</string>
+    <string name="title_notification_assist">%1$s will assist to an event!</string>
+    <string name="title_notification_liked">%1$s liked your event!</string>
 </resources>
