Hotfix user following texts

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,5 +84,7 @@
     <string name="loading">Porfavor, espere...</string>
     <string name="title_notification_followed">%1$s has followed you!</string>
     <string name="title_notification_assist">%1$s will assist to an event!</string>
+    <string name="title_notification_assist_creator">%1$s asistirá a tu evento!</string>
     <string name="title_notification_liked">%1$s liked your event!</string>
+    <string name="not_following">Not following</string>
 </resources>
