--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="notify_event_liked">%1$s just liked your event: %2$s!</string>
     <string name="sportshub_description">An app developed by SportsTech</string>
     <!-- End -->
+    <string name="event_button_save">The event is loading...</string>
     <string name="loading">Please, wait...</string>
     <string name="title_notification_followed">%1$s has followed you!</string>
     <string name="title_notification_assist_creator">%1$s will assist to your event!</string>
